# CFOOD2

./: .gitignore  CFood.cpp  CFood.sln  CFood.vcxproj  CFood.vcxproj.filters  CMakeLists.txt  Display.cpp  Display.h  Doxyfile  EventListener.cpp  EventListener.h  MAINPAGE.md  Parser.cpp  Parser.h  README.md  README2.md  Recipe.cpp  Recipe.h  cfood.codedocs  file.cpp  file.h  file_TEST_SAVE.md  mainpage.dox
.github/workflows/: cmake-single-platform.yml  doxygen-workflow.yml
Documents/: docs.txt
Recipes/: 0.md  0.txt  a_sample_recipe.md  blaha.txt  butter_chicken.md  carrot_cake.md  chicken_alfredo.md  chickpea_cauliflower_bowl.md  chickpea_curry.md  chocolate_brownies - Copy (11).md  chocolate_brownies.md  dal.md  eggs_benedict.md  file2.txt  minestrone_soup.md  oatmeal_cookies.md  pad_thai.md  pancakes.md  sundried_tomato_chickpeas  sundried_tomato_chickpeas.md  tomato_soup.md  vegan_carrot_cake.md  vegan_mac_and_cheese.md
html/: doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  md_file___t_e_s_t___s_a_v_e.html  pages.html
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  pages_0.js  pages_1.js  searchdata.js
include/: Console.h  EventListener.h  Menu.h  Parser.h  Recipe.h  Util.h  file.h  tests.h
latex/: md__r_e_a_d_m_e.tex  md_file___t_e_s_t___s_a_v_e.tex  refman.tex
src/: CFood.cpp  Console.cpp  EventListener.cpp  Menu.cpp  Parser.cpp  Recipe.cpp  Util.cpp  file.cpp  tests.cpp
test_CFoodProject/: pch.h  test_CFoodProject.cpp  test_CFoodProject.vcxproj
test_library/: test_library.cpp  test_library.vcxproj
tests/: test_parser.cpp  tests.cpp
x64/Debug/: CFood.exe.recipe  CFood.ilk  CFood.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/CFood.tlog/: CFood.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
